--- a/public/otsuka/index.css
+++ b/public/otsuka/index.css
@@ -48,8 +48,22 @@ header h1 {
   outline: none;
   margin: 10px;
 
-  background-color: rgb(199, 197, 197);
+  background-color: rgba(199, 197, 197, 0.5);
   border-radius: 25px;
 }
 
+.search-box {
+  padding: 20px;
+}
 
+.search-input {
+  background-color: rgba(199, 197, 197, 0.5);
+  border-radius: 25px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  width: 100%;
+  border: none;
+
+  font-weight: 500;
+  font-size: 18px;
+}
